--- a/chat-stress-test.yaml
+++ b/chat-stress-test.yaml
@@ -20,7 +20,7 @@ config:
       rampTo: 1200000
       name: Ramp up 2
     - duration: 1200
-      arrivalCount: 600000
+      arrivalCount: 1200000
       rampTo: 0
       name: Ramp Down
 
